syntax = "proto3";

option java_package = "com.piggymetrics.account.grpc";
option java_outer_classname = "AccountProto";
option java_multiple_files = false;

service AccountService {
  rpc GetAccountByName(GetAccountRequest) returns (GetAccountResponse);
  rpc GetCurrentAccount(GetCurrentAccountRequest) returns (GetAccountResponse);
  rpc SaveCurrentAccount(SaveAccountRequest) returns (SuccessMessage);
  rpc CreateNewAccount(CreateAccountRequest) returns (GetAccountResponse);
}

message Account {
  string name = 1;
  string lastSeen = 2;
  repeated Item incomes = 3;
  repeated Item expenses = 4;
  Saving saving = 5;
  string note = 6;
}

message Item {
  string title = 1;
  string amount = 2; // this is the type of BigDecimal
  Currency currency = 3;
  TimePeriod period = 4;
  string icon = 5;
}

enum Currency {
  USD = 0;
  EUR = 1;
  RUB = 2;
}

enum TimePeriod {
  YEAR = 0;
  QUARTER = 1;
  MONTH = 2;
  DAY = 3;
  HOUR = 4;
}

message Saving {
  string amount = 1; // this is the type of BigDecimal
  Currency currency = 2;
  string interest = 3; // this is the type of BigDecimal
  bool deposit = 4;
  bool capitalization = 5;
}

message GetAccountRequest {
  string name = 1;
}

message GetAccountResponse {
  Account account = 1;
}

message GetCurrentAccountRequest{
  string principalName = 1;
}

message SaveAccountRequest {
  string principalName = 1;
  Account account = 2;
}

message CreateAccountRequest {
  string username = 1;
  string password = 2;
}

 message SuccessMessage {
  string successMessage = 1;
 }


